--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="rgb(45, 110, 29)" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="I am a graduate from the broadcast journalism course at City, University of London, and have varied experience in producing and editing content for TV"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Maya</title>
+    <title>Maya Russell-Smith: Broadcast Journalist</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
